src/components/PostCard/PostCard.module.css
.card {
  background: white;
  border-radius: 10px;
  padding: 18px;

  box-shadow: 0 2px 6px rgba(0,0,0,0.08);

  display: flex;
  flex-direction: column;
  gap: 10px;

  transition: transform 0.1s ease;
}

.card:hover {
  transform: translateY(-2px);
}

.meta {
  font-size: 13px;
  color: #666;
  display: flex;
  gap: 10px;
}

.subreddit {
  font-weight: 600;
  color: #ff4500;
}

.author {
  color: #888;
}

.title {
  font-size: 18px;
  font-weight: 600;
  color: #222;
}

.image {
  width: 100%;
  max-height: 500px;
  object-fit: contain;
  border-radius: 8px;
}

.text {
  font-size: 15px;
  line-height: 1.6;
  color: #333;
}

.link {
  color: #0079d3;
  font-weight: 500;
  text-decoration: none;
}

.footer {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  font-size: 14px;
  color: #666;
  margin-top: 10px;
}

.votes, .comments{
  text-align: center;
  margin-top: 40px;
  color: #ff4500;
}

